fix buttons alignment in header

--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -56,11 +56,6 @@
     border-left: 1px solid $dark-shade-10;
   }
 
-  &__buttons {
-    align-self: flex-end;
-    display: flex;
-  }
-
   &__btn {
     height: 34px;
     margin-right: 20px;
